# stock-trading-app-data-enginner

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  scheduled-ingest.yml
config/: tickers.txt
dbt/: .user.yml  dbt_project.yml  profiles.yml.example
dbt/models/: sources.yml
dbt/models/marts/: fct_stock_daily_returns.sql  schema.yml
dbt/models/staging/: schema.yml  stg_stock_ohlcv.sql
docs/: DASHBOARD.md  LEVEL1.md  LEVEL2.md
src/stock_pipeline/: __init__.py  cli.py  config.py  incremental.py  logging_config.py  pipeline.py
src/stock_pipeline/dashboard/: __init__.py  app.py  data.py
src/stock_pipeline/extract/: __init__.py  polygon.py
src/stock_pipeline/load/: __init__.py  csv_exporter.py  snowflake_loader.py
src/stock_pipeline/quality/: __init__.py
src/stock_pipeline/transform/: __init__.py  normalize.py
tests/: conftest.py
tests/fixtures/: polygon_aggs_response.json
tests/integration/: test_pipeline.py
tests/unit/: test_cli.py  test_csv_exporter.py  test_dashboard_data.py  test_incremental.py  test_normalize.py  test_polygon_client.py  test_quality.py  test_snowflake_loader.py
