[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-pipeline"
version = "0.1.0"
description = "Stock data ingestion pipeline using Polygon.io with data quality, testing, and CI/CD"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.2.0,<3.0.0",
    "pandera>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]
snowflake = [
    "snowflake-connector-python[pandas]>=3.12.0",
]

[project.scripts]
stock-ingest = "stock_pipeline.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_pipeline"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
source = ["stock_pipeline"]
branch = false

[tool.coverage.report]
fail_under = 80
show_missing = true
